# storm-engine

./: .gitignore  CMakeLists.txt  conanfile.py
.github/workflows/: cibuild.yml
cmake/: AutoSetup.cmake
src/apps/: CMakeLists.txt
src/apps/ENGINE/: CMakeLists.txt  Core.cpp  Main.cpp  compatibility.cpp  compatibility.hpp  compiler.cpp  compiler.h  data.cpp  data.h  expression.cpp  file_service.cpp  internal_functions.cpp  internal_functions.hpp  message_script.h  s_classtab.cpp  s_dbg_sourceview.cpp  s_debug.cpp  s_debug.h  s_deftab.cpp  s_functab.cpp  s_functab.h  s_stack.cpp  s_stack.h  s_vartab.h  token.cpp  token.h
src/apps/config/: SetupDlg.cpp
src/apps/test-all/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/Animals/: Animals.cpp  Animals.h  TFishSchools.cpp  TFishSchools.h
src/libs/Battle_interface/: ActivePerkShower.cpp  ActivePerkShower.h  LogAndAction.cpp  MessageIcons.cpp  MessageIcons.h  Utils.cpp  Utils.h  battle_command.cpp  battle_command.h  battle_sign.cpp  battle_sign.h  bi_defines.h
src/libs/Blot/: Blots.cpp  Blots.h
src/libs/Common_h/: CMakeLists.txt  Character.h  EntityManager.h  attributes.h  core.h  defines.h  dx9render.h  entity.h  message.h  ship_base.h  utf8.h  vdata.h
src/libs/Dialog/: dialog.cpp  dialog.h
src/libs/Island/: Foam.cpp  Foam.h  ISLAND.cpp
src/libs/Location/: Character.cpp  Character.h  CharactersGroups.cpp  CharactersGroups.h  Grass.cpp  Location.cpp  LocationCamera.cpp  LocationCamera.h  LocationScriptLib.cpp  NPCharacter.cpp  Player.cpp  Player.h
src/libs/Locator/: blast.cpp  blast.h  locator.cpp  locator.h
src/libs/Mast/: mast.cpp
src/libs/Rigging/: Flag.cpp  Flag.h  SAILONE.cpp  sail.cpp  sail.h  (+1 more)
src/libs/core/: CMakeLists.txt
src/libs/core/src/: compatibility.hpp  resource_locator.cpp  resource_locator.hpp
src/libs/scripting/: CMakeLists.txt
src/libs/scripting/src/: attribute.hpp  compatibility.hpp  message.hpp  string_codec.cpp  string_codec.h
src/libs/scripting/src/include/storm/scripting/: compiler.hpp  keywords.hpp  teho_string_codec.h  tokens.hpp
src/libs/scripting/src/source/storm/scripting/: compiler.cpp  keywords.cpp  string_codec.cpp  tokens.cpp
src/libs/scripting/test/: attribute.test.cpp  compiler.test.cpp  keywords.test.cpp  message.test.cpp
(+222 files in other folders)
